<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.iscodem.loginfinal.CrearUsuarioActivity"
    >

    <include layout="@layout/activity_action_toolbar"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:padding="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/myStyleEditTextCreate"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtUsuarioCreateLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edtUsuarioCreateLogin"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/myStyleEditTextCreate"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtUsuarioCreateEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edtUsuarioCreateEmail"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/myStyleEditTextCreate"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtUsuarioCreateNombres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edtUsuarioCreateNombres"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/myStyleEditTextCreate"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtUsuarioCreateApellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edtUsuarioCreateApellidos"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/myStyleEditTextCreate"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtUsuarioCreateDNI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edtUsuarioCreateDNI"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/myStyleEditTextCreate"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtUsuarioCreatePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edtUsuarioCreatePassword"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnCrearCuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnCrearCuenta"
                android:theme="@style/myStyleButton"
                android:onClick="crearCuenta"
                />
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
